@@ -103,86 +103,86 @@ public class OverlapsMainlines {
          */
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
 //        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(5), 1);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(10), 1);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(7), start.plusMinutes(12), 2);
-        com.interviews.questions.ranges.StartEndShift ml3 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(9), start.plusMinutes(15), 3);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(10), 1);
+        StartEndShift ml2 = new StartEndShift(start.plusMinutes(7), start.plusMinutes(12), 2);
+        StartEndShift ml3 = new StartEndShift(start.plusMinutes(9), start.plusMinutes(15), 3);
 
-        List<com.interviews.questions.ranges.StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2, ml3));
+        List<StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2, ml3));
 
         Assert.assertEquals(5, result.size());
 
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(7), 1), result.get(0));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(7), start.plusMinutes(9), 3), result.get(1));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(9), start.plusMinutes(10), 6), result.get(2));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(10), start.plusMinutes(12), 5), result.get(3));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(12), start.plusMinutes(15), 3), result.get(4));
+        Assert.assertEquals(new StartEndShift(start, start.plusMinutes(7), 1), result.get(0));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(7), start.plusMinutes(9), 3), result.get(1));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(9), start.plusMinutes(10), 6), result.get(2));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(10), start.plusMinutes(12), 5), result.get(3));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(12), start.plusMinutes(15), 3), result.get(4));
     }
 
     @Test
     public void splitOverlappingRangesIntoAllUniqueRanges1() {
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(15), 3);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(1), 3);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(15), 3);
+        StartEndShift ml2 = new StartEndShift(start, start.plusMinutes(1), 3);
 
-        List<com.interviews.questions.ranges.StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
+        List<StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
         Assert.assertEquals(2, result.size());
 
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(1), 6), result.get(0));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(1), start.plusMinutes(15), 3), result.get(1));
+        Assert.assertEquals(new StartEndShift(start, start.plusMinutes(1), 6), result.get(0));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(1), start.plusMinutes(15), 3), result.get(1));
 
     }
 
     @Test
     public void splitOverlappingRangesIntoAllUniqueRanges2() {
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(15), 3);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(15), 3);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(15), 3);
+        StartEndShift ml2 = new StartEndShift(start, start.plusMinutes(15), 3);
 
-        List<com.interviews.questions.ranges.StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
+        List<StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
         Assert.assertEquals(1, result.size());
 
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(15), 6), result.get(0));
+        Assert.assertEquals(new StartEndShift(start, start.plusMinutes(15), 6), result.get(0));
     }
 
     @Test
     public void splitOverlappingRangesIntoAllUniqueRanges3() {
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(5), 3);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(1), start.plusMinutes(6), 3);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(5), 3);
+        StartEndShift ml2 = new StartEndShift(start.plusMinutes(1), start.plusMinutes(6), 3);
 
-        List<com.interviews.questions.ranges.StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
+        List<StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
         Assert.assertEquals(3, result.size());
 
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(1), 3), result.get(0));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(1), start.plusMinutes(5), 6), result.get(1));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(5), start.plusMinutes(6), 3), result.get(2));
+        Assert.assertEquals(new StartEndShift(start, start.plusMinutes(1), 3), result.get(0));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(1), start.plusMinutes(5), 6), result.get(1));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(5), start.plusMinutes(6), 3), result.get(2));
 
     }
 
     @Test
     public void splitOverlappingRangesIntoAllUniqueRanges4() {
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(5), 3);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(5), start.plusMinutes(6), 3);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(5), 3);
+        StartEndShift ml2 = new StartEndShift(start.plusMinutes(5), start.plusMinutes(6), 3);
 
-        List<com.interviews.questions.ranges.StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
+        List<StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
         Assert.assertEquals(2, result.size());
 
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(5), 3), result.get(0));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(5), start.plusMinutes(6), 3), result.get(1));
+        Assert.assertEquals(new StartEndShift(start, start.plusMinutes(5), 3), result.get(0));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(5), start.plusMinutes(6), 3), result.get(1));
     }
 
     @Test
     public void splitOverlappingRangesIntoAllUniqueRanges5() {
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(5), 3);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(6), start.plusMinutes(7), 3);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(5), 3);
+        StartEndShift ml2 = new StartEndShift(start.plusMinutes(6), start.plusMinutes(7), 3);
 
-        List<com.interviews.questions.ranges.StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
+        List<StartEndShift> result = splitOverlappingRangesIntoAllUniqueRanges(Arrays.asList(ml1, ml2));
         Assert.assertEquals(2, result.size());
 
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(5), 3), result.get(0));
-        Assert.assertEquals(new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(6), start.plusMinutes(7), 3), result.get(1));
+        Assert.assertEquals(new StartEndShift(start, start.plusMinutes(5), 3), result.get(0));
+        Assert.assertEquals(new StartEndShift(start.plusMinutes(6), start.plusMinutes(7), 3), result.get(1));
     }
 
 
@@ -195,12 +195,12 @@ public class OverlapsMainlines {
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
         LocalDateTime end = start.plusMinutes(15);
 //        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(5), 1);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(10), 1);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(7), start.plusMinutes(12), 2);
-        com.interviews.questions.ranges.StartEndShift ml3 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(9), end, 3);
-        com.interviews.questions.ranges.StartEndShift ml4 = new com.interviews.questions.ranges.StartEndShift(end.plusMinutes(9), end.plusHours(1), 3);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(10), 1);
+        StartEndShift ml2 = new StartEndShift(start.plusMinutes(7), start.plusMinutes(12), 2);
+        StartEndShift ml3 = new StartEndShift(start.plusMinutes(9), end, 3);
+        StartEndShift ml4 = new StartEndShift(end.plusMinutes(9), end.plusHours(1), 3);
 
-        List<com.interviews.questions.ranges.StartEndShift> result = mergeOverlapping(Arrays.asList(ml1, ml2, ml3, ml4));
+        List<StartEndShift> result = mergeOverlapping(Arrays.asList(ml1, ml2, ml3, ml4));
     }
 
     @Test
@@ -215,15 +215,15 @@ public class OverlapsMainlines {
     public void intersectingOverlappingIntervals() {
         LocalDateTime start = LocalDateTime.of(LocalDate.now(), LocalTime.MIN);
         LocalDateTime end = start.plusMinutes(25);
-        com.interviews.questions.ranges.StartEndShift ml1 = new com.interviews.questions.ranges.StartEndShift(start, start.plusMinutes(22), 10);
-        com.interviews.questions.ranges.StartEndShift ml2 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(9), start.plusMinutes(13), 10);
-        com.interviews.questions.ranges.StartEndShift ml3 = new com.interviews.questions.ranges.StartEndShift(start.plusMinutes(12), end, 10);
+        StartEndShift ml1 = new StartEndShift(start, start.plusMinutes(22), 10);
+        StartEndShift ml2 = new StartEndShift(start.plusMinutes(9), start.plusMinutes(13), 10);
+        StartEndShift ml3 = new StartEndShift(start.plusMinutes(12), end, 10);
 //        StartEndShift ml4 = new StartEndShift(start.plusMinutes(50), end.plusDays(10), 10);
-        List<com.interviews.questions.ranges.StartEndShift> result1 = calcOverlapping(Arrays.asList(ml1, ml2, ml3));
-        List<com.interviews.questions.ranges.StartEndShift> result2 = calcOverlapping1(Arrays.asList(ml1, ml2, ml3));
+        List<StartEndShift> result1 = calcOverlapping(Arrays.asList(ml1, ml2, ml3));
+        List<StartEndShift> result2 = calcOverlapping1(Arrays.asList(ml1, ml2, ml3));
 
 //        List<StartEndShift> result = calcOverlappingMl(Arrays.asList(ml1, ml2, ml3,ml4));
-        List<com.interviews.questions.ranges.StartEndShift> result = calcOverlappingMl(Arrays.asList(ml1, ml2, ml3));
+        List<StartEndShift> result = calcOverlappingMl(Arrays.asList(ml1, ml2, ml3));
 
         Assert.assertEquals(5, result.size());
         Assert.assertEquals(10, result.get(0).getCapacity());
@@ -235,26 +235,26 @@ public class OverlapsMainlines {
         Assert.assertEquals(end, result.get(result.size() - 1).getEnd());
     }
 
-    private List<com.interviews.questions.ranges.StartEndShift> splitOverlappingRangesIntoAllUniqueRanges(List<com.interviews.questions.ranges.StartEndShift> list) {
+    private List<StartEndShift> splitOverlappingRangesIntoAllUniqueRanges(List<StartEndShift> list) {
         /**
          *  https://softwareengineering.stackexchange.com/questions/363091/split-overlapping-ranges-into-all-unique-ranges?newreg=942197cefec54b70857c0715cb29f4f1#comment829992_363096
          */
-        List<com.interviews.questions.ranges.EdgeTimeValue> edgeTimeValues = new ArrayList<>();
-        for (com.interviews.questions.ranges.StartEndShift shift : list) {
+        List<EdgeTimeValue> edgeTimeValues = new ArrayList<>();
+        for (StartEndShift shift : list) {
             LocalDateTime start = shift.getStart();
             LocalDateTime end = shift.getEnd();
             int capacity = shift.getCapacity();
-            com.interviews.questions.ranges.EdgeTimeValue startEdgeTimeValue = new com.interviews.questions.ranges.EdgeTimeValue(start, capacity, false);
-            com.interviews.questions.ranges.EdgeTimeValue endEdgeTimeValue = new com.interviews.questions.ranges.EdgeTimeValue(end, capacity, true);
+            EdgeTimeValue startEdgeTimeValue = new EdgeTimeValue(start, capacity, false);
+            EdgeTimeValue endEdgeTimeValue = new EdgeTimeValue(end, capacity, true);
             edgeTimeValues.addAll(Arrays.asList(startEdgeTimeValue, endEdgeTimeValue));
         }
-        Collections.sort(edgeTimeValues, Comparator.comparing(com.interviews.questions.ranges.EdgeTimeValue::getTime).thenComparing(com.interviews.questions.ranges.EdgeTimeValue::isEndTime));
+        Collections.sort(edgeTimeValues, Comparator.comparing(EdgeTimeValue::getTime).thenComparing(EdgeTimeValue::isEndTime));
         System.out.println(edgeTimeValues);
-        List<com.interviews.questions.ranges.PeriodTimeResult> resultList = new ArrayList<>();
-        List<com.interviews.questions.ranges.StartEndShift> shiftResultList = new ArrayList<>();
+        List<PeriodTimeResult> resultList = new ArrayList<>();
+        List<StartEndShift> shiftResultList = new ArrayList<>();
         List<Integer> currentS = new ArrayList<>();
         for (int i = 0; i < edgeTimeValues.size(); i++) {
-            com.interviews.questions.ranges.EdgeTimeValue triplet = edgeTimeValues.get(i);
+            EdgeTimeValue triplet = edgeTimeValues.get(i);
 
             LocalDateTime timeTagN;
 //            if (triplet.isEndTime()) {
@@ -296,9 +296,9 @@ public class OverlapsMainlines {
                     && i + 1 < edgeTimeValues.size()
                     && ((triplet.isEndTime && !edgeTimeValues.get(i + 1).isEndTime) == false)) {
 
-                com.interviews.questions.ranges.PeriodTimeResult tripletsResult = new PeriodTimeResult(timeTagN, timeTagM, currentS);
+                PeriodTimeResult tripletsResult = new PeriodTimeResult(timeTagN, timeTagM, currentS);
 //                System.out.println(tripletsResult);
-                com.interviews.questions.ranges.StartEndShift result = new com.interviews.questions.ranges.StartEndShift(timeTagN, timeTagM, currentS.stream().mapToInt(Integer::intValue).sum());
+                StartEndShift result = new StartEndShift(timeTagN, timeTagM, currentS.stream().mapToInt(Integer::intValue).sum());
                 System.out.println(result);
                 shiftResultList.add(result);
                 resultList.add(tripletsResult);
@@ -307,77 +307,77 @@ public class OverlapsMainlines {
         return shiftResultList;
     }
 
-    private List<com.interviews.questions.ranges.StartEndShift> mergeOverlapping(List<com.interviews.questions.ranges.StartEndShift> shifts) {
+    private List<StartEndShift> mergeOverlapping(List<StartEndShift> shifts) {
         //https://stackoverflow.com/questions/31670849/merge-overlapping-intervals
         if (shifts == null || shifts.isEmpty() || shifts.size() == 1)
             return shifts;
 
-        Collections.sort(shifts, Comparator.comparing(com.interviews.questions.ranges.StartEndShift::getStart).thenComparing(com.interviews.questions.ranges.StartEndShift::getEnd));
+        Collections.sort(shifts, Comparator.comparing(StartEndShift::getStart).thenComparing(StartEndShift::getEnd));
 
-        com.interviews.questions.ranges.StartEndShift first = shifts.get(0);
+        StartEndShift first = shifts.get(0);
         LocalDateTime start = first.getStart();
         LocalDateTime end = first.getEnd();
 
-        ArrayList<com.interviews.questions.ranges.StartEndShift> result = new ArrayList<>();
+        ArrayList<StartEndShift> result = new ArrayList<>();
 
         for (int i = 1; i < shifts.size(); i++) {
-            com.interviews.questions.ranges.StartEndShift current = shifts.get(i);
+            StartEndShift current = shifts.get(i);
             if (!current.getStart().isAfter(end)) {
                 long endMillis = Math.max(current.getEnd().toInstant(ZoneOffset.UTC).toEpochMilli(), end.toInstant(ZoneOffset.UTC).toEpochMilli());
                 end = LocalDateTime.ofInstant(Instant.ofEpochMilli(endMillis), ZoneOffset.UTC);
             } else {
-                result.add(new com.interviews.questions.ranges.StartEndShift(start, end));
+                result.add(new StartEndShift(start, end));
                 start = current.getStart();
                 end = current.getEnd();
             }
         }
-        result.add(new com.interviews.questions.ranges.StartEndShift(start, end));
+        result.add(new StartEndShift(start, end));
         return result;
     }
 
-    private List<com.interviews.questions.ranges.StartEndShift> calcOverlapping(List<com.interviews.questions.ranges.StartEndShift> startEndShifts) {
+    private List<StartEndShift> calcOverlapping(List<StartEndShift> startEndShifts) {
 
         List<LocalDateTime> localDateTimeList = new ArrayList<>(startEndShifts.size() * 2);
-        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getStart()).collect(Collectors.toList()));
-        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getEnd()).collect(Collectors.toList()));
+        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getStart()).toList());
+        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getEnd()).toList());
         Collections.sort(localDateTimeList);
 
-        List<com.interviews.questions.ranges.StartEndShift> rangesOutput = new ArrayList<>();
+        List<StartEndShift> rangesOutput = new ArrayList<>();
 
         for (int i = 1; i < localDateTimeList.size(); i++) {
             LocalDateTime start = localDateTimeList.get(i - 1); // Subtract one for silly index counting.
             LocalDateTime stop = localDateTimeList.get(i); // Subtract one for silly index counting. Or use ( i ) instead.
             if (!start.equals(stop)) {  // If not equal, proceed. (If equal, ignore and move on to next loop.)
-                com.interviews.questions.ranges.StartEndShift range = new com.interviews.questions.ranges.StartEndShift(start, stop);
+                StartEndShift range = new StartEndShift(start, stop);
                 rangesOutput.add(range);
             }
         }
         return rangesOutput;
     }
 
-    private List<com.interviews.questions.ranges.StartEndShift> calcOverlapping1(List<com.interviews.questions.ranges.StartEndShift> startEndShifts) {
+    private List<StartEndShift> calcOverlapping1(List<StartEndShift> startEndShifts) {
 
         List<LocalDateTime> localDateTimeList = new ArrayList<>(startEndShifts.size() * 2);
-        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getStart()).collect(Collectors.toList()));
-        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getEnd()).collect(Collectors.toList()));
+        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getStart()).toList());
+        localDateTimeList.addAll(startEndShifts.stream().map(startEndShift -> startEndShift.getEnd()).toList());
         Collections.sort(localDateTimeList);
 
-        List<com.interviews.questions.ranges.StartEndShift> rangesOutput = new ArrayList<>();
+        List<StartEndShift> rangesOutput = new ArrayList<>();
 
         for (int i = 1; i < localDateTimeList.size(); i++) {
             LocalDateTime start = localDateTimeList.get(i - 1); // Subtract one for silly index counting.
             LocalDateTime stop = localDateTimeList.get(i); // Subtract one for silly index counting. Or use ( i ) instead.
             if (!start.equals(stop)) {  // If not equal, proceed. (If equal, ignore and move on to next loop.)
-                com.interviews.questions.ranges.StartEndShift range = new com.interviews.questions.ranges.StartEndShift(start, stop);
+                StartEndShift range = new StartEndShift(start, stop);
                 rangesOutput.add(range);
             }
         }
         return rangesOutput;
     }
 
-    private List<com.interviews.questions.ranges.StartEndShift> calcOverlappingMl(List<com.interviews.questions.ranges.StartEndShift> startEndShifts) {
-        Comparator<com.interviews.questions.ranges.StartEndShift> startShiftComparator = Comparator.comparing(com.interviews.questions.ranges.StartEndShift::getStart);
-        Comparator<com.interviews.questions.ranges.StartEndShift> endShiftComparator = Comparator.comparing(com.interviews.questions.ranges.StartEndShift::getEnd);
+    private List<StartEndShift> calcOverlappingMl(List<StartEndShift> startEndShifts) {
+        Comparator<StartEndShift> startShiftComparator = Comparator.comparing(StartEndShift::getStart);
+        Comparator<StartEndShift> endShiftComparator = Comparator.comparing(StartEndShift::getEnd);
         Collections.sort(startEndShifts, startShiftComparator.thenComparing(endShiftComparator));
 
         Map<LocalDateTime, Integer> specificMinuteTimeToCapacityMap = new TreeMap<>();
@@ -387,7 +387,7 @@ public class OverlapsMainlines {
         LocalDateTime currentTime = start;
         while (currentTime.isBefore(end)) {
             specificMinuteTimeToCapacityMap.put(currentTime, 0);
-            for (com.interviews.questions.ranges.StartEndShift startEndShift : startEndShifts) {
+            for (StartEndShift startEndShift : startEndShifts) {
                 if (!startEndShift.getStart().isAfter(currentTime) && !startEndShift.getEnd().isBefore(currentTime)) {
                     specificMinuteTimeToCapacityMap.put(currentTime, specificMinuteTimeToCapacityMap.get(currentTime) + startEndShift.getCapacity());
                 }
@@ -398,13 +398,13 @@ public class OverlapsMainlines {
         return reduceInterval(specificMinuteTimeToCapacityMap, end);
     }
 
-    private List<com.interviews.questions.ranges.StartEndShift> reduceInterval(Map<LocalDateTime, Integer> specificMinuteTimeToCapacityMap, LocalDateTime endTime) {
-        List<com.interviews.questions.ranges.StartEndShift> result = new ArrayList<>();
+    private List<StartEndShift> reduceInterval(Map<LocalDateTime, Integer> specificMinuteTimeToCapacityMap, LocalDateTime endTime) {
+        List<StartEndShift> result = new ArrayList<>();
         Integer capacityValue = null;
         for (Map.Entry<LocalDateTime, Integer> entry : specificMinuteTimeToCapacityMap.entrySet()) {
             if (!entry.getValue().equals(capacityValue)) {
                 capacityValue = entry.getValue();
-                com.interviews.questions.ranges.StartEndShift startEndShift = new com.interviews.questions.ranges.StartEndShift(entry.getKey(), null, capacityValue);
+                StartEndShift startEndShift = new StartEndShift(entry.getKey(), null, capacityValue);
                 setEndDate(result, entry.getKey());
                 result.add(startEndShift);
             }
@@ -414,7 +414,7 @@ public class OverlapsMainlines {
         return result;
     }
 
-    private void setEndDate(List<com.interviews.questions.ranges.StartEndShift> result, LocalDateTime key) {
+    private void setEndDate(List<StartEndShift> result, LocalDateTime key) {
         if (!result.isEmpty()) {
             StartEndShift prevEndShift = result.get(result.size() - 1);
             prevEndShift.setEnd(key);
